# WatchfulEye

./: .gitignore  README.md
WatchfulEye/: CMakeLists.txt  WatchfulEye.sln
WatchfulEye/Camera/: CMakeLists.txt
WatchfulEye/Camera/CameraLib/: CMakeLists.txt  Camera.cpp  Camera.h  Logging.cpp  Logging.h  ReadConfigCamera.cpp  ReadConfigCamera.h  config.json
WatchfulEye/Camera/CameraProcess/: CMakeLists.txt  main.cpp
WatchfulEye/Camera/CameraTest/: CMakeLists.txt  cmpFrames.cpp
WatchfulEye/Camera/CameraUI/: CMakeLists.txt  CameraThread.cpp  CameraThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
WatchfulEye/Camera/Service/myproto/: frameVideo.proto
WatchfulEye/CameraProcess/: CMakeLists.txt  main.cpp
WatchfulEye/Server/: CMakeLists.txt
WatchfulEye/Server/ServerLib/: CMakeLists.txt  Logging.h  Queue.cpp  Queue.h  ReadConfigServer.cpp  ReadConfigServer.h  Server.cpp  Server.h  ServerService.cpp  ServerService.h  Sqlite.cpp  Sqlite.h  Yolo.cpp  Yolo.h  config.json
WatchfulEye/Server/ServerLib/sqlite-amalgamation/: shell.c
WatchfulEye/Server/ServerProcess/: CMakeLists.txt  main.cpp
WatchfulEye/Server/ServerTest/: CMakeLists.txt  calcAvg.cpp  improveQueue.cpp  protectedQueue.cpp
WatchfulEye/Server/ServerUI/: CMakeLists.txt  ServerThread.cpp  ServerThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
WatchfulEye/Server/Service/: CMakeLists.txt
WatchfulEye/ServerProcess/: CMakeLists.txt  main.cpp
WatchfulEye/Service/myproto/: frameVideo.proto
WatchfulEye/WatchfulEye/: CMakeLists.txt  Camera.cpp  Camera.h  Logging.cpp  Logging.h  Queue.cpp  Queue.h  SaveCSV.cpp  SaveCSV.h  Server.cpp  Server.h  Sqlite.cpp  Sqlite.h  WatchfulEye.cpp  WatchfulEye.h  WatchfulEye.vcxproj  WatchfulEye.vcxproj.filters  Yolo.cpp  Yolo.h  config.json  main.cpp  ‏‏ConfigurationCamera.cpp  ‏‏ConfigurationCamera.h  ‏‏ConfigurationServer.cpp  ‏‏ConfigurationServer.h
WatchfulEye/WatchfulEyeTest/: CMakeLists.txt  WatchfulEyeTest.vcxproj  calcAvg.cpp  cmpFrames.cpp  improveQueue.cpp  protectedQueue.cpp  test.cpp
